[gd_scene load_steps=17 format=3 uid="uid://b63qhctnjuprt"]

[ext_resource type="Script" uid="uid://dqnwas2qwdak3" path="res://Scripts/UI/SettingsControl.gd" id="1_2w27d"]
[ext_resource type="Script" uid="uid://cy78ks14ged5q" path="res://Scripts/UI/Utils/SettingControl.gd" id="1_iyjrv"]
[ext_resource type="ButtonGroup" uid="uid://7kxiih08be1x" path="res://Assets/Misc/SettingsVRModeButtonGroup.tres" id="3_638ql"]
[ext_resource type="Script" uid="uid://mg053f7nlefe" path="res://Scripts/UI/Utils/SliderScaler.gd" id="3_fc6kx"]
[ext_resource type="Script" path="res://Scripts/Misc/VRToggler.gd" id="3_xqjff"]
[ext_resource type="Script" uid="uid://c2rrnshh68u56" path="res://Scripts/UI/Utils/ButtonGroupSetting.gd" id="5_nxibr"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_f0a0s"]
bg_color = Color(0.84, 0.84, 0.84, 0.85098)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_iyjrv"]
bg_color = Color(1, 1, 1, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_nvavk"]
content_margin_left = 4.0
content_margin_top = 5.75
content_margin_right = 4.0
content_margin_bottom = 0.0
bg_color = Color(0.1, 0.1, 0.1, 0.6)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4
corner_detail = 6

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_vbufl"]
content_margin_left = 4.0
content_margin_top = 5.75
content_margin_right = 4.0
content_margin_bottom = 0.0
bg_color = Color(0.1, 0.1, 0.1, 0.6)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4
corner_detail = 6

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_fc6kx"]
content_margin_left = 4.0
content_margin_top = 4.0
content_margin_right = 4.0
content_margin_bottom = 4.0
bg_color = Color(0.225, 0.225, 0.225, 0.6)
corner_radius_top_left = 3
corner_radius_bottom_left = 3
corner_detail = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_uelfo"]
content_margin_left = 4.0
content_margin_top = 4.0
content_margin_right = 4.0
content_margin_bottom = 4.0
bg_color = Color(0, 0, 0, 0.6)
corner_radius_top_left = 3
corner_radius_bottom_left = 3
corner_detail = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_xqjff"]
content_margin_left = 4.0
content_margin_top = 4.0
content_margin_right = 4.0
content_margin_bottom = 4.0
bg_color = Color(0.1, 0.1, 0.1, 0.6)
corner_radius_top_left = 3
corner_radius_bottom_left = 3
corner_detail = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_gsokm"]
content_margin_left = 4.0
content_margin_top = 4.0
content_margin_right = 4.0
content_margin_bottom = 4.0
bg_color = Color(0.225, 0.225, 0.225, 0.6)
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_detail = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_qys3p"]
content_margin_left = 4.0
content_margin_top = 4.0
content_margin_right = 4.0
content_margin_bottom = 4.0
bg_color = Color(0, 0, 0, 0.6)
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_detail = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_nxibr"]
content_margin_left = 4.0
content_margin_top = 4.0
content_margin_right = 4.0
content_margin_bottom = 4.0
bg_color = Color(0.1, 0.1, 0.1, 0.6)
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_detail = 5

[node name="SettingsControl" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_2w27d")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Top" type="PanelContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_f0a0s")

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/Top"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/Top/MarginContainer"]
layout_mode = 2

[node name="SettingsLabel" type="Label" parent="VBoxContainer/Top/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Settings"

[node name="Spacer" type="Control" parent="VBoxContainer/Top/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Exit" type="Button" parent="VBoxContainer/Top/MarginContainer/HBoxContainer"]
layout_mode = 2
text = " Done "

[node name="Bottom" type="PanelContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_iyjrv")

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/Bottom"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 5

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer/Bottom/MarginContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/Bottom/MarginContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 10

[node name="VolumeRow" type="HBoxContainer" parent="VBoxContainer/Bottom/MarginContainer/ScrollContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/Bottom/MarginContainer/ScrollContainer/VBoxContainer/VolumeRow"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Overall Volume"

[node name="Spacer" type="Control" parent="VBoxContainer/Bottom/MarginContainer/ScrollContainer/VBoxContainer/VolumeRow"]
layout_mode = 2
size_flags_horizontal = 3

[node name="HSlider" type="HSlider" parent="VBoxContainer/Bottom/MarginContainer/ScrollContainer/VBoxContainer/VolumeRow"]
custom_minimum_size = Vector2(600, 0)
layout_mode = 2
size_flags_vertical = 4
theme_override_styles/slider = SubResource("StyleBoxFlat_nvavk")
max_value = 1.0
step = 0.01
script = ExtResource("1_iyjrv")
prop_name = "value"
setting_name = "overall_volume"

[node name="SliderScaler" type="Node" parent="VBoxContainer/Bottom/MarginContainer/ScrollContainer/VBoxContainer/VolumeRow/HSlider"]
script = ExtResource("3_fc6kx")
stylebox = SubResource("StyleBoxFlat_nvavk")

[node name="MusicVolumeRow" type="HBoxContainer" parent="VBoxContainer/Bottom/MarginContainer/ScrollContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/Bottom/MarginContainer/ScrollContainer/VBoxContainer/MusicVolumeRow"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Music Volume"

[node name="Spacer" type="Control" parent="VBoxContainer/Bottom/MarginContainer/ScrollContainer/VBoxContainer/MusicVolumeRow"]
layout_mode = 2
size_flags_horizontal = 3

[node name="HSlider" type="HSlider" parent="VBoxContainer/Bottom/MarginContainer/ScrollContainer/VBoxContainer/MusicVolumeRow"]
custom_minimum_size = Vector2(600, 0)
layout_mode = 2
size_flags_vertical = 4
theme_override_styles/slider = SubResource("StyleBoxFlat_nvavk")
max_value = 1.0
step = 0.01
script = ExtResource("1_iyjrv")
prop_name = "value"
setting_name = "music_volume"

[node name="SliderScaler" type="Node" parent="VBoxContainer/Bottom/MarginContainer/ScrollContainer/VBoxContainer/MusicVolumeRow/HSlider"]
script = ExtResource("3_fc6kx")
stylebox = SubResource("StyleBoxFlat_nvavk")

[node name="SensitivityControl" type="HBoxContainer" parent="VBoxContainer/Bottom/MarginContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
script = ExtResource("3_xqjff")

[node name="Label" type="Label" parent="VBoxContainer/Bottom/MarginContainer/ScrollContainer/VBoxContainer/SensitivityControl"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Mouse Sensitivity"

[node name="Spacer" type="Control" parent="VBoxContainer/Bottom/MarginContainer/ScrollContainer/VBoxContainer/SensitivityControl"]
layout_mode = 2
size_flags_horizontal = 3

[node name="HSlider" type="HSlider" parent="VBoxContainer/Bottom/MarginContainer/ScrollContainer/VBoxContainer/SensitivityControl"]
custom_minimum_size = Vector2(460, 0)
layout_mode = 2
size_flags_vertical = 4
theme_override_styles/slider = SubResource("StyleBoxFlat_nvavk")
min_value = 0.001
max_value = 0.009
step = 0.001
value = 0.005
script = ExtResource("1_iyjrv")
prop_name = "value"
setting_name = "mouse_sensitivity"

[node name="SliderScaler" type="Node" parent="VBoxContainer/Bottom/MarginContainer/ScrollContainer/VBoxContainer/SensitivityControl/HSlider"]
script = ExtResource("3_fc6kx")
stylebox = SubResource("StyleBoxFlat_vbufl")

[node name="VRModeRow" type="HBoxContainer" parent="VBoxContainer/Bottom/MarginContainer/ScrollContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
theme_override_constants/separation = 0
script = ExtResource("3_xqjff")
mode = 0

[node name="Label" type="Label" parent="VBoxContainer/Bottom/MarginContainer/ScrollContainer/VBoxContainer/VRModeRow"]
layout_mode = 2
size_flags_horizontal = 0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Movement Mode"

[node name="Spacer" type="Control" parent="VBoxContainer/Bottom/MarginContainer/ScrollContainer/VBoxContainer/VRModeRow"]
layout_mode = 2
size_flags_horizontal = 3

[node name="StationaryMode" type="Button" parent="VBoxContainer/Bottom/MarginContainer/ScrollContainer/VBoxContainer/VRModeRow"]
layout_mode = 2
size_flags_vertical = 4
theme_override_styles/hover = SubResource("StyleBoxFlat_fc6kx")
theme_override_styles/pressed = SubResource("StyleBoxFlat_uelfo")
theme_override_styles/normal = SubResource("StyleBoxFlat_xqjff")
toggle_mode = true
button_pressed = true
button_group = ExtResource("3_638ql")
text = " Stationary"

[node name="RoomscaleMode" type="Button" parent="VBoxContainer/Bottom/MarginContainer/ScrollContainer/VBoxContainer/VRModeRow"]
layout_mode = 2
size_flags_vertical = 4
theme_override_styles/hover = SubResource("StyleBoxFlat_gsokm")
theme_override_styles/pressed = SubResource("StyleBoxFlat_qys3p")
theme_override_styles/normal = SubResource("StyleBoxFlat_nxibr")
toggle_mode = true
button_group = ExtResource("3_638ql")
text = "Roomscale "

[node name="ButtonGroupSetting" type="Node" parent="VBoxContainer/Bottom/MarginContainer/ScrollContainer/VBoxContainer/VRModeRow" node_paths=PackedStringArray("button_values")]
script = ExtResource("5_nxibr")
button_group = ExtResource("3_638ql")
button_values = {
NodePath("../StationaryMode"): 0,
NodePath("../RoomscaleMode"): 1
}
setting_name = "vr_move_mode"

[node name="ResetProgressRow" type="HBoxContainer" parent="VBoxContainer/Bottom/MarginContainer/ScrollContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
alignment = 2

[node name="ResetProgressButton" type="Button" parent="VBoxContainer/Bottom/MarginContainer/ScrollContainer/VBoxContainer/ResetProgressRow"]
layout_mode = 2
text = " Reset Progress "

[connection signal="pressed" from="VBoxContainer/Top/MarginContainer/HBoxContainer/Exit" to="." method="exit_settings"]
[connection signal="value_changed" from="VBoxContainer/Bottom/MarginContainer/ScrollContainer/VBoxContainer/VolumeRow/HSlider" to="VBoxContainer/Bottom/MarginContainer/ScrollContainer/VBoxContainer/VolumeRow/HSlider" method="change_setting"]
[connection signal="value_changed" from="VBoxContainer/Bottom/MarginContainer/ScrollContainer/VBoxContainer/MusicVolumeRow/HSlider" to="VBoxContainer/Bottom/MarginContainer/ScrollContainer/VBoxContainer/MusicVolumeRow/HSlider" method="change_setting"]
[connection signal="value_changed" from="VBoxContainer/Bottom/MarginContainer/ScrollContainer/VBoxContainer/SensitivityControl/HSlider" to="VBoxContainer/Bottom/MarginContainer/ScrollContainer/VBoxContainer/SensitivityControl/HSlider" method="change_setting"]
[connection signal="pressed" from="VBoxContainer/Bottom/MarginContainer/ScrollContainer/VBoxContainer/ResetProgressRow/ResetProgressButton" to="." method="reset_progress"]
